feat: update readme and swagger docs
